@@ -1,5 +1,3 @@
-*) support multiple attachment selection, including wildcards.
-
 *) fix NPE in KeySelectorPane editing with a new user.
 
 *) fix jmaildir on windows xp
